# CAuth

./: .gitattributes  .gitignore  .gitmodules  README.md  cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ports.json
assets/: .store  0-project-synopsis-final-draft.docx  1_ph1r1_presentation.pptx  2_ph1r2_presentation.pptx  3_ph2r1_presentation.pptx  4_ph2r2_presentation.pptx  5_final_presentation.pptx  Untitled Diagram.drawio  client_pov_auth.drawio  r1_report_main.docx  r2_report_main.docx
auth/auth-management/: package.json
auth/auth-management/components/: loginForm.tsx
auth/auth-management/data/: page_data.ts  postUserAuthReq.ts
auth/auth-management/pages/: _app.tsx  index.tsx
auth/cauth-proxy/: Cargo.toml
auth/manage-api/: package.json
experiments/: README.md
experiments/Weather App/: index.html  script.js  style.css
experiments/actix-rest-api/: Cargo.toml
experiments/alaap-experiment/: Cargo.toml  package-lock.json  package.json  tsconfig.json
experiments/alaap-experiment/main/: main.rs
experiments/alaap-experiment/sql-js/: index.ts
experiments/auth/: Cargo.toml
experiments/auth/src/: main.rs  state.rs
experiments/auth/src/models/: auth_error.rs  mod.rs  token.rs
experiments/auth/src/routes/: mod.rs
experiments/auth/src/routes/client_access/: mod.rs
experiments/auth/src/routes/management/: auth.rs  mod.rs
experiments/axum-rest-api/: Cargo.toml
experiments/rohit-experiment/: package-lock.json  package.json
experiments/user-auth-page-react/: .gitignore  README.md  package-lock.json  package.json
proto/auth/: Cargo.toml
proto/auth-management/: README.md  pnpm-lock.yaml
proto/auth/migration/: Cargo.toml
proto/auth/src/: main.rs
proto/auth/src/models/: mod.rs  prelude.rs  token.rs
proto/auth/src/routes/: mod.rs  service_access_management.rs  service_api.rs  service_management.rs
proto/auth/src/routes/management/: add.rs  auth.rs  get.rs  mod.rs
proto/cauth-proxy/: Cargo.toml
proto/cauth-proxy/src/: main.rs  state.rs
proto/database-service/: index.ts  package.json
proto/manage-api/: app.ts  package.json  tsconfig.json
samples/info_app/: package.json
samples/unified_services/: app.ts  package-lock.json  package.json  routes.ts  server.ts  tsconfig.json
(+125 files in other folders)
