[package]
name = "channu-ws-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main-server"
path = "main/main.rs"

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
futures-channel = "0.3.27"
futures-util = "0.3.27"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"
