[package]
name = "cauth-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
axum-macros = "0.3.7"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
jsonwebtoken = "8.3.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7.8", features = [
  "with-serde_json-1",
  "runtime",
] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
